Quod Libet now uses GStreamer 0.10, GTK+ 2.8, and PyGTK 2.8.
See http://www.sacredchao.net/quodlibet/wiki/Development/GStreamer0.10
for the upgrade requirements.

Mutagen is no longer distributed with Quod Libet. To download Mutagen,
see http://www.sacredchao.net/quodlibet/wiki/Development/Mutagen.

0.18 - "Babies Sporting Monocles"?
 * MP4 iTunes metadata can be written. (#199)
 * Alt+s switches between search entry and song list. (#254)
 * GStreamer 0.10 port. (#406)
 * Album covers can be switched off in the Album List. (#466)
 * The Album List text can be changed with a pattern. (#467)
 * "Limit" in the Search view can take ratings into account. (#469)
 * UI Changes:
   * Alt+Enter / Ctrl+I shows tags/information for selected songs. (#462)
   * DnD to playlists/the queue from the File System view. (#481)
   * F2 renames playlists. (#482)
   * "Add a Tag" autocompletes tag names. (#493)
   * RSS links can be dragged to the Audio Feeds sidebar. (#523)
 * Bug Fixes:
   * ID3v1 tags no longer interfere with APEv2 tags. (#395)
   * Playing albums with one song no longer skips forwards. (#503)
   * 'totaltracks' Vorbis tags are read properly. (#511)
   * Adding songs to a playlist doesn't unsort it. (#512)
   * "Tags From Path" patterns are no longer greedy. (#519, thanks to
     Decklin Foster)
   * Internet Radio supports the ~people tag. (#520)
   * Word-wrap in lyrics pane works properly. (#531)
   * Ex Falso properly opens an initial directory. (#537, thanks to ch.trassl)
   * '~format' is usable from --print-playing. ([2810])
 * Plugin errors are captured in a dialog. ([2817])
 * New synthetic numeric tags, ~#tracks and ~#discs. ([2828])
 * Ex Falso no longer depends on GStreamer. ([2837])
 * New Lithuanian translation by Jonas Slivka. ([2780])
 * Updated translations:
   * Bulgarian, by Rostislav Raykov.
   * Finnish, by Jari Rahkonen.
   * Korean, by Byung-Hee HWANG and ChangBom Yoon.
   * Galician and Spanish, by Johám-Luís Miguéns Vila.